--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "inclusy",
   "version": "1.0.0",
-  "description": "loaning chatbot",
-  "main": "index.js",
+  "description": "Inclusy Server",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" &amp;&amp; exit 1",
+    "start": "node app.js"
   },
-  "author": "",
+  "author": "FreeCodeCamp",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "moment": "^2.19.3",
-    "nodemon": "^1.12.1",
+    "mongoose": "^4.13.5",
     "request": "^2.83.0"
   }
 }
